fixed layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,8 @@ main {
   flex-direction: column;
   align-items: center;
   flex: 1;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 @media (min-width: 768px) {
